@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2002/10/18 21:55:32 abs Exp $
