@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2002/10/18 21:55:32 abs Exp $
+
+SHA1 (Number-Latin-1.01.tar.gz) = 2d989b13c6b088ac8362c83f71896da26c01695f
+Size (Number-Latin-1.01.tar.gz) = 5176 bytes
